--- a/F1_headStart/index.html
+++ b/F1_headStart/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <h1>Soon to be Three js Website</h1>
+    <canvas class="webgl"></canvas>
 </body>
 
-<script src="./index.js"></script>
+<script type="module" src="./index.js"></script>
 
 </html>
